--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=IPHURTS;Database=invEST;Trusted_Connection=True;MultipleActiveResultSets=true; trustservercertificate=true"
+    "DefaultConnection": "Server=IPHURTS;Database=invEST;Trusted_Connection=True;MultipleActiveResultSets=true; trustservercertificate=true",
+    "CrowdFarmingIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CrowdFarming;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
