--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=IPHURTS;Database=invEST;Trusted_Connection=True;MultipleActiveResultSets=true; trustservercertificate=true",
-    "CrowdFarmingIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CrowdFarming;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "CrowdFarmingIdentityDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=CrowdFarming;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "csConnection": "Server=(localdb)\\mssqllocaldb;Database=CrowdFarming;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
